--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,7 @@
   
   <!---->
   <connectionStrings>
-    <add name="myCon" connectionString="Data Source=PC\sqlexpress;Initial Catalog=gameShop;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="myCon" connectionString="Data Source=ACER-PC\aubrett;Initial Catalog=gameShop;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
 
